--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "hardhat run scripts/deploy.ts --network base",
+    "deploy:local": "hardhat run scripts/deploy.ts --network localhost"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reown/walletkit": "^1.1.2",
     "@tanstack/react-query": "^5.64.2",
+    "@walletconnect/core": "^2.17.5",
+    "@walletconnect/utils": "^2.17.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "connectkit": "^1.8.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.16",
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^39.3.0",
-    "viem": "^2.22.13",
+    "viem": "2.x",
     "wagmi": "^2.14.9"
   },
   "devDependencies": {
