--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "deploy:local": "hardhat run scripts/deploy.ts --network localhost"
   },
   "dependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@openzeppelin/contracts": "^5.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@reown/walletkit": "^1.1.2",
     "@tanstack/react-query": "^5.64.2",
     "@walletconnect/core": "^2.17.5",
@@ -23,12 +26,15 @@
     "connectkit": "^1.8.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.4",
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-is": ">= 16.8.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vercel": "^39.3.0",
     "viem": "2.x",
     "wagmi": "^2.14.9"
