--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "wagmi": "^2.14.9"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@types/node": "^20.17.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "hardhat": "^2.22.18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
