--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "deploy": "hardhat run scripts/deploy.ts --network base",
-    "deploy:local": "hardhat run scripts/deploy.ts --network localhost"
+    "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
+    "test": "forge test -vvv --via-ir",
+    "build:forge": "forge build --via-ir"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.19.3",
     "@babel/core": ">=7.0.0 <8.0.0",
     "@openzeppelin/contracts": "^5.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
