--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "deploy": "hardhat run scripts/deploy.ts --network base",
     "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
-    "test": "forge test -vvv --via-ir",
-    "build:forge": "forge build --via-ir"
+    "test:foundry": "forge test -vvv --via-ir",
+    "build:foundry": "forge build --sizes --via-ir"
   },
   "dependencies": {
     "@aave/core-v3": "^1.19.3",
